--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~39.0.2",
+    "date-fns": "^2.16.1",
+    "expo": "^39.0.4",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12"
   },
