--- a/app.json
+++ b/app.json
@@ -13,9 +13,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -27,6 +25,10 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+
+    "notification": {
+      "bundledSounds": ["alarm.mp3", "alarm_wav.wav"]
     }
   }
 }
