--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "date-fns": "^2.16.1",
     "expo": "^39.0.4",
     "expo-notifications": "~0.7.2",
