--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-native": "^0.63.36",
+    "typescript": "^4.1.2"
   },
   "private": true
 }
