--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^2.16.1",
     "expo": "^39.0.4",
     "expo-notifications": "~0.7.2",
+    "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
